1. Decided to prune the list of bins if it grows to more than 10 items 2. Decided to use LinkedList for bins instead of ArrayList 3. Some more typo fixes and name changes